# orbitsuite-core

./: .env.example  .flake8  .gitignore  .pylintrc  LICENSE  LICENSE.md  README.md  README_quickstart.txt  main.py  pyproject.toml  requirements.txt  run_build_task.py
orbitsuite/: __init__.py
orbitsuite/server/: __init__.py  serve.py
output/codegen/: create_a_function.py
output/engineering/general_20250823_024728/: plan.json  spec.json  summary.json  summary.md
output/engineering/web-application_20250823_025005/: plan.json  spec.json  summary.json  summary.md
output/engineering/web-application_20250823_050541/: spec.json  summary.json  summary.md
output/final/: build_a_betting_app_to_give_odds_for_the_4e43bb87.json
output/patches/: patch_1755916682.json
output/tests/: test_1755916682.json
scripts/: build_all.py  describe_task.py
src/: README.md  TIERS.md  UPGRADE.md  __init__.py  base_agent.py  codegen_agent.py  core_mode.py  demo.py  demo_mode.py  engineer_agent.py  engineer_core.py  feature_gates.py  io_runner.py  llm_agent.py  llm_provider.py  memory_agent.py  orbit_types.py  orchestrator_agent.py  output_manager.py  patcher_agent.py  supervisor.py  task_linguist.py  task_linguist_core.py  tester_agent.py  utils.py
src/server/: serve.py
test_root/: __init__.py
tests/: test_core.py  test_demo.py  test_io_runner.py  test_llm_agent.py  test_llm_connection.py  test_output_manager.py  test_pipeline_artifacts.py
