# --------------------------------------------
# OrbitSuite Core (minimal by default)
# - No hard runtime deps to keep the core tiny.
# - Feature sets are exposed via Poetry "extras".
# - Python 3.8–3.12 supported (adjust as needed).
# --------------------------------------------

[tool.poetry]
name = "orbitsuite-core"
version = "0.1.0"
description = "OrbitSuite Core minimal agent framework"
authors = ["OrbitSuite Core Team <core@orbitsuite.cloud>"]
readme = "src/README.md"
license = "MIT"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.13"

# Optional feature deps (not installed by default)
openai = { version = ">=1.0.0", optional = true }
fastapi = { version = ">=0.100.0", optional = true }
redis = { version = ">=4.0.0", optional = true }
psycopg2-binary = { version = ">=2.9", optional = true }
transformers = { version = ">=4.20.0", optional = true }
torch = { version = ">=2.2.0", optional = true }
sentence-transformers = { version = ">=2.0.0", optional = true }
llama-cpp-python = { version = ">=0.2.0", optional = true }

[tool.poetry.extras]
# Everything for OrbitSuite Core full stack (local + HF + OpenAI)
# features

full = [
  "openai",
  "fastapi",
  "redis",
  "psycopg2-binary",
  "transformers",
  "torch",
  "sentence-transformers",
  "llama-cpp-python",
]

# LLM-only stack (local + HF)
llm = [
  "transformers",
  "torch",
  "sentence-transformers",
  "llama-cpp-python",
]

# API surface (FastAPI runtime only)
api = ["fastapi"]

# Storage connectors commonly used in core projects
db = ["psycopg2-binary", "redis"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pyinstaller = "^6.15.0"

[tool.poetry.scripts]
orbitsuite = "main:main"
orbitsuite-core = "main:main"
orbit-build = "scripts.build_all:main"

[tool.poetry.plugins."orbitsuite.commands"]
ship = "scripts.build_all:main"


[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
